# cheddar

./: .editorconfig  .gitignore  Cargo.toml  Makefile_common.mk  README.md  build.sh  deploy-cheddar-token-testnet.sh  deploy-p1.sh  deploy-testnet.sh  set-start-end.sh
.github/workflows/: rust-clippy.yml
cheddar/: Cargo.toml  README.md
cheddar/src/: empty_nep_145.rs  internal.rs  lib.rs  migrations.rs  storage.rs  upgrade.rs  util.rs  vesting.rs
neardev/: dev-account  dev-account.env
p1-staking-pool/: Cargo.toml  TODO.org
p1-staking-pool-dyn/: Cargo.toml  README.md
p1-staking-pool-dyn/src/: constants.rs  errors.rs  interfaces.rs  lib.rs  util.rs  vault.rs
p1-staking-pool-fix/src/: constants.rs
p1-staking-pool-fixed/: Cargo.toml
p1-staking-pool-fixed/src/: lib.rs  vault.rs
p1-staking-pool/src/: account.rs  constants.rs  errors.rs  interface.rs  interfaces.rs  lib.rs  util.rs  vault.rs
p2-token-staking-fixed/: Cargo.toml  README.md  callbacks.md
p2-token-staking-fixed/src/: constants.rs  errors.rs  interfaces.rs  lib.rs  util.rs  vault.rs
p3-farm/: Cargo.toml  README.md  callbacks.md
p3-farm-nft/: Cargo.toml  P3_nft_explanation.md  README.md  TODO.md  TODO.org  build.sh  changes.txt
p3-farm-nft/src/: constants.rs  errors.rs  helpers.rs  interfaces.rs  lib.rs  storage_management.rs  token_standards.rs  vault.rs
p3-farm/src/: constants.rs  errors.rs  helpers.rs  interfaces.rs  lib.rs  vault.rs
p3-lib/: Cargo.toml
p3-lib/src/: lib.rs
p4-farm-nft/: Cargo.toml  README.md  build.sh  test.sh
p4-farm-nft/src/: errors.rs  helpers.rs  interfaces.rs  lib.rs  storage_management.rs  token_standards.rs  vault.rs
p4-pool/: Cargo.toml
sputnikdao2/: csv.sh  delete_keys.sh  deploy-sputnikdao-factory.sh  deploy-sputnikdao.sh  mint_proposal.sh
xcheddar/: Cargo.toml  README.md
xcheddar/res/: cheddar_coin.wasm  xcheddar_token.wasm
xcheddar/src/: lib.rs  owner.rs  storage_impl.rs  utils.rs  views.rs  xcheddar.rs
xcheddar/tests/: test_migrate.rs  test_owner.rs  test_reward.rs  test_stake.rs  test_storage.rs  test_unstake.rs
xcheddar/tests/common/: init.rs  mod.rs  utils.rs
