[package]
name = "cheddar-coin"
version = "1.0.0"
authors = []
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uint = { version = "0.9.0", default-features = false }
near-sys = "0.1.0"
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
