[package]
name = "p1-staking-pool"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uint = { version = "0.9.0", default-features = false }
# near-contract-standards = { git = "https://github.com/near/near-sdk-rs" }
near-sdk = "3.1.0"
# near-sdk = { git = "https://github.com/near/near-sdk-rs", ver="v3.1.0" }


[dev-dependencies]
# near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
# near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", version="v3.1.0" }
