[package]
name = "p3-farm-nft"
version = "0.1.0"
authors = ["Guacharo"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = { version = "1.0" }
uint = { version = "0.9.0", default-features = false }
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
