[package]
name = "p3-farm"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uint = { version = "^0.9.5", default-features = false }
near-sdk = "^4.1" # { git = "https://github.com/near/near-sdk-rs", tag="3.1.0" }
near-contract-standards = "^4.1"
p3-lib = { path = "../p3-lib" }


[dev-dependencies]
# near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
# near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", version="v3.1.0" }
