[package]
name = "xcheddar-token"
version = "1.0.2"
authors = ["Guacharo"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
near-sdk = "4.0.0-pre.7"
near-sys = "0.1.0"
near-contract-standards = "4.0.0-pre.7"
chrono = "0.4.19"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.7"
cheddar-coin = {path = "../cheddar"}